# SheafTheoreticChannelCharting

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  requirements.txt
config/: train.yaml
config/dataset/: asu_campus_3p5.yaml
config/model/: siameseNN.yaml
configs/: SiameseNN.yaml
scripts/: test.py  train.py
src/: __init__.py  datamodule.py  dataset.py  layers.py  models.py
src/agents/: base_agent.py  ot_agent.py  reference_frame_agent.py
src/baselines/: optimal_transport.py
src/network/: network.py
